# eva

./: .gitignore  Doxyfile  README.md  autogen.sh  config.h  configure.ac  libtool  novemberizing.mdj  novemberizing.uml
src/: Makefile.am
src/example/: ExampleClient.c  ExampleClientNonblock.c  ExampleClientSocket.c  ExampleClientSocketNonblock.c  ExampleCommand.c  ExampleEventEngine.c  ExampleEventEngineCommand.c  ExampleServer.c  ExampleServerNonblock.c  ExampleServerSocket.c  ExampleServerSocketNonblock.c  ExampleSync.c
src/x/: client.c  client.h  command.c  command.h  descriptor.c  descriptor.h  event.c  event.h  object.c  object.h  server.c  server.h  session.c  session.h  socket.c  socket.h  std.c  std.h  stream.c  stream.h  sync.c  sync.h
src/x/client/: socket.c  socket.h
src/x/command/: event.c  event.h
src/x/command/event/: generator.c  generator.h  subscription.c  subscription.h
src/x/descriptor/: event.c  event.h
src/x/descriptor/event/: generator.c  generator.h  subscription.c  subscription.h
src/x/descriptor/event/generator/: epoll.c  epoll.h
src/x/event/: engine.c  engine.h  generator.c  generator.h  handler.h  object.h  pool.c  pool.h  queue.c  queue.h  subscription.h  type.h
src/x/event/engine/: wait.c  wait.h
src/x/server/: socket.c  socket.h
src/x/session/: pool.c  pool.h  socket.c  socket.h
src/x/session/socket/: pool.c  pool.h
src/x/sync/: mutex.c  mutex.h
